--- a/trunk/Languages/default-es.xml
+++ b/trunk/Languages/default-es.xml
@@ -448,16 +448,22 @@
 		</menu>
 		<menu text="_Ayuda">
 			<item id="ID_HELP_FAQ" text="Guía de _Usuarios Shareaza"/>
-			<item id="ID_HELP_FORUMS" text="Foros de _Shareaza"/>
-			<item id="ID_HELP_FIREWALLS" text="_Ayuda de Router"/>
+	
+			<separator/>
+			<menu text="_Guides">
+			<item id="ID_HELP_GUIDE" text="´Guía de _Usuarios Shareaza "/>
+			<item id="ID_HELP_ROUTER" text="_Ayuda de Router"/>
 			<item id="ID_HELP_SECURITY" text="_Security Help"/>
+			<item id="ID_HELP_CODEC" text="_Ayuda de Codec"/>
+			</menu>
 			<separator/>
 			<menu text="_Websites">
 				<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
 				<separator/>
+				<item id="ID_HELP_FORUMS" text="Foros de _Shareaza"/>
+				<item id="ID_HELP_UPDATE" text="Últimas Noticias"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>
-				<item id="ID_HELP_WEB_3" text="Slyck.com"/>
 			</menu>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_Acerca de Shareaza..."/>
@@ -532,22 +538,30 @@
 			<item id="ID_WINDOW_MONITOR" text="Mostrar _Monitor"/>
 			<item id="ID_WINDOW_REMOTE" text="Mostrar _Control Remoto"/>
 		</menu>
-		<menu text="_Ayuda">
-			<item id="ID_HELP_FAQ" text="Guía _Usuarios Shareaza"/>
-			<item id="ID_HELP_FORUMS" text="Foros _Shareaza"/>
-			<item id="ID_HELP_FIREWALLS" text="_Ayuda Router"/>
-			<item id="ID_HELP_SECURITY" text="_Security Help"/>
+		
+
+        <menu text="_Ayuda">
+			<item id="ID_HELP_FAQ" text="Guía de _Usuarios Shareaza"/>
+	
 			<separator/>
-			<menu text="_Sitios Web">
-				<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
-				<separator/>
-				<item id="ID_HELP_WEB_1" text="File Sharing Portal"/>
-				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>
-				<item id="ID_HELP_WEB_3" text="Slyck.com"/>
+			<menu text="_Guides">
+			<item id="ID_HELP_GUIDE" text="´Guía de _Usuarios Shareaza "/>
+			<item id="ID_HELP_ROUTER" text="_Ayuda de Router"/>
+			<item id="ID_HELP_SECURITY" text="_Security Help"/>
+			<item id="ID_HELP_CODEC" text="_Ayuda de Codec"/>
 			</menu>
 			<separator/>
-			<item id="ID_HELP_ABOUT" text="_Acerca de Shareaza..."/>
-		</menu>
+			<menu text="_Websites">
+				<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
+				<separator/>
+				<item id="ID_HELP_FORUMS" text="Foros de _Shareaza"/>
+				<item id="ID_HELP_UPDATE" text="Últimas Noticias"/>
+				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
+				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>
+			</menu>
+			<separator/>
+<item id="ID_HELP_ABOUT" text="_Acerca de Shareaza..."/>
+	    </menu>
 	</menu>
 	<menu name="CMainWnd.Windowed" type="bar">
 		<menu text="_Red">
@@ -611,19 +625,24 @@
 			<item id="ID_WINDOW_TABBAR" text="Mostrar _Barra de Lengüetas "/>
 			<item id="ID_WINDOW_MONITOR" text="Show _Monitor"/>
 			<item id="ID_WINDOW_REMOTE" text="Show _Remote"/>
-		</menu>
-			<menu text="_Ayuda">
-			<item id="ID_HELP_FAQ" text="Guía _Usuarios Shareaza"/>
-			<item id="ID_HELP_FORUMS" text="Foros _Shareaza"/>
-			<item id="ID_HELP_FIREWALLS" text="_Ayuda Router"/>
-			<item id="ID_HELP_SECURITY" text="_Security Help"/>
+		</menu><menu text="_Ayuda">
+			<item id="ID_HELP_FAQ" text="Guía de _Usuarios Shareaza"/>
+	
 			<separator/>
-			<menu text="_Sitios Web">
+			<menu text="_Guides">
+			<item id="ID_HELP_GUIDE" text="´Guía de _Usuarios Shareaza "/>
+			<item id="ID_HELP_ROUTER" text="_Ayuda de Router"/>
+			<item id="ID_HELP_SECURITY" text="_Security Help"/>
+			<item id="ID_HELP_CODEC" text="_Ayuda de Codec"/>
+			</menu>
+			<separator/>
+			<menu text="_Websites">
 				<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
 				<separator/>
-				<item id="ID_HELP_WEB_1" text="File Sharing Portal"/>
+				<item id="ID_HELP_FORUMS" text="Foros de _Shareaza"/>
+				<item id="ID_HELP_UPDATE" text="Últimas Noticias"/>
+				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>
-				<item id="ID_HELP_WEB_3" text="Slyck.com"/>
 			</menu>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_Acerca de Shareaza..."/>
@@ -2211,15 +2230,20 @@
 	<tip id="ID_DOWNLOADS_URL" message="Agregar fuente (URI)..."/>
     <tip id="ID_DOWNLOADS_VIEW_REVIEWS" message="Ver reviews para la descarga seleccionada"/>
     <tip id="ID_HELP_ABOUT" message="Información acerca de Shareaza..."/>
-	<tip id="ID_HELP_FAQ" message="Visitar los Forums de Shareaza, donde puedes solicitar ayuda. Si deseas pregunta en Español!"/>
-	<tip id="ID_HELP_FIREWALLS" message="Consigue ayuda para configurar tu Router Y/O Firewall."/>
+	<tip id="ID_HELP_CODEC" message="Todo sobre codecs y problemas de video."/>
+    <tip id="ID_HELP_FAQ" message="Visitar los Forums de Shareaza, donde puedes solicitar ayuda. Si deseas pregunta en Español!"/>
+	<tip id="ID_HELP_ROUTER message="Consigue ayuda para configurar tu Router Y/O Firewall."/>
 	<tip id="ID_HELP_FORUMS" message="Visitar las foros de Shareaza, para soporte técnico y discusiones."/>
-	<tip id="ID_HELP_HOMEPAGE" message="Visitar Shareaza.com."/>
+	<tip id="ID_HELP_GUIDE" message="Visit the Shareaza Users Guide."/>
+    <tip id="ID_HELP_HOMEPAGE" message="Visitar Shareaza.com."/>
 	<tip id="ID_HELP_SECURITY" message="Ayuda protegiendo tu sistema de programas hostiles"/>
-	<tip id="ID_HELP_WEB_1" message="Visitar Zeropaid.com"/>
-	<tip id="ID_HELP_WEB_2" message="Visitar P2PForums.com"/>
-	<tip id="ID_HELP_WEB_3" message="Visitar Slyck.com"/>
-	<tip id="ID_HELP_WEB_4" message="Visitar Gnutella.com"/>
+	tip id="ID_HELP_UPDATE" message="Checar noticias y actualizaciones."/>
+	<tip id="ID_HELP_WEB_1" message="Visitar este sitio"/>
+	<tip id="ID_HELP_WEB_2" message="Visitar este sitio"/>
+	<tip id="ID_HELP_WEB_3" message="Visitar este sitio"/>
+	<tip id="ID_HELP_WEB_4" message="Visitar este sitio"/>
+	<tip id="ID_HELP_WEB_5" message="Visitar este sitio"/>
+	<tip id="ID_HELP_WEB_6" message="Visitar este sitio"/>
 	<tip id="ID_HITMONITOR_CLEAR" message="Borrar la historia."/>
 	<tip id="ID_HITMONITOR_PAUSE" message="Poner en pausa al monitor."/>
 	<tip id="ID_HITMONITOR_SEARCH" message="Buscar la red por el resultado seleccionado."/>
@@ -4096,8 +4120,6 @@
 		<control/>
 		<control caption="Cerrar"/>
 		<control caption="Como sea necesario|Cuando el ratio es más bajo de 100%|Nunca"/>
-        <control caption="Empezar nuevas transferencias:"/>
-        <control caption="Transferencias:"/>
 	</dialog>
 
 	<dialog name="CDownloadGroupDlg" cookie="BuEdSyBuCoBuBuBuBuBuEdBu" caption="Propiedades del Grupo de Descarga">
@@ -4140,9 +4162,9 @@
 
 	<dialog name="CDecodeMetadataDlg" cookie="BuBuStCo" caption="Metadata Localisation">
 		<control caption="OK"/>
-		<control caption="Cancel"/>
-		<control caption="Please select the method of re-encoding"/>
-		<control caption="Arabic|Baltic|Central European|Chinese simplified|Chinese traditional|Cyrillic|Greek|Hebrew|Japanese|Korean|Thai|Turkish|Vietnamese"/>
+		<control caption="Cancelar"/>
+		<control caption="Por favor selecciona un metodo de codificación"/>
+		<control caption="Arabico|Baltico|Europa Central|Chino Simplificado|Chino Traducional|Cirílico|Griego|Hebreo|Japonés|Koreano|Taílandes|Turco|Vietnamita"/>
 	</dialog>
 </dialogs>
 
