--- a/Languages/default-es.xml
+++ b/Languages/default-es.xml
@@ -2232,12 +2232,12 @@
     <tip id="ID_HELP_ABOUT" message="Información acerca de Shareaza..."/>
 	<tip id="ID_HELP_CODEC" message="Todo sobre codecs y problemas de video."/>
     <tip id="ID_HELP_FAQ" message="Visitar los Forums de Shareaza, donde puedes solicitar ayuda. Si deseas pregunta en Español!"/>
-	<tip id="ID_HELP_ROUTER message="Consigue ayuda para configurar tu Router Y/O Firewall."/>
+	<tip id="ID_HELP_ROUTER" message="Consigue ayuda para configurar tu Router Y/O Firewall."/>
 	<tip id="ID_HELP_FORUMS" message="Visitar las foros de Shareaza, para soporte técnico y discusiones."/>
 	<tip id="ID_HELP_GUIDE" message="Visit the Shareaza Users Guide."/>
     <tip id="ID_HELP_HOMEPAGE" message="Visitar Shareaza.com."/>
 	<tip id="ID_HELP_SECURITY" message="Ayuda protegiendo tu sistema de programas hostiles"/>
-	tip id="ID_HELP_UPDATE" message="Checar noticias y actualizaciones."/>
+	<tip id="ID_HELP_UPDATE" message="Checar noticias y actualizaciones."/>
 	<tip id="ID_HELP_WEB_1" message="Visitar este sitio"/>
 	<tip id="ID_HELP_WEB_2" message="Visitar este sitio"/>
 	<tip id="ID_HELP_WEB_3" message="Visitar este sitio"/>
